# DiplomaBackendGC

./: .env  .gitignore  db.json  db.sqlite3  manage.py  pyproject.toml  pytest.ini
GradeBookGC_BACKEND/: asgi.py  celery.py  middlewares.py  pagination.py  permissions.py  request_factory.py  serializers.py  settings.py  swagger.py  throttling.py  urls.py  viewsets.py  wsgi.py
administration/: filters.py  urls.py
administration/api/: permisions.py  serializers.py  views.py
administration/tests/: conftest.py
analytics/: exceptions.py  tasks.py  types.py  utils.py
analytics/api/: schemas.py  views.py
analytics/repositories/: detail_subject.py
analytics/services/: __init__.py  base.py  excel.py  pdf.py
authentication/: authentication.py  collections.py  serializers.py  urls.py  views.py
bot/: main.py
bot/handlers/: student.py
methodist/: constants.py  fields.py  filters.py  tasks.py  urls.py
methodist/admin/: filters.py  forms.py  main.py  users.py
methodist/api/: permissions.py  serializers.py  views.py
methodist/managers/: rating.py  student.py  subject.py  user.py
methodist/migrations/: 0001_initial.py  0002_remove_rating_rating_unique_and_more.py  0003_alter_subject_options.py  0004_alter_subject_options.py  0005_remove_student_educational_program.py  0006_student_educational_program.py  0007_alter_educationalprogram_department_and_more.py  0008_student_telegram_id.py  0009_teacher.py
methodist/models/: __init__.py  main.py  subject.py  users.py
methodist/tests/: conftest.py
student/: admin.py  models.py  security.py  utils.py
(+35 files in other folders)
